[gd_scene load_steps=4 format=3 uid="uid://b7fwx56n0jnkd"]

[ext_resource type="Script" path="res://AI/Base/ai_controller.gd" id="1_617uw"]
[ext_resource type="Shape3D" uid="uid://dpvuqlxwkw00e" path="res://detection_shape.tres" id="2_krexa"]
[ext_resource type="Script" path="res://AI/Base/DetectionArea.gd" id="4_uobrm"]

[node name="AIController" type="Node3D" groups=["Controller"]]
script = ExtResource("1_617uw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
avoidance_enabled = true
neighbor_distance = 10.0
max_speed = 100.0

[node name="ForgetTarget" type="Timer" parent="."]
one_shot = true

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39248, 3.34015)
collision_layer = 0
collision_mask = 6
monitorable = false
script = ExtResource("4_uobrm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = ExtResource("2_krexa")

[node name="LineOfSight" type="RayCast3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.31758)
target_position = Vector3(0, 0, -5)
collision_mask = 3
debug_shape_custom_color = Color(0.839216, 0.0470588, 0.0470588, 1)
debug_shape_thickness = 5

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
